@@ -3,6 +3,7 @@
 #if !RANDS_USE_ALL
 
 #define ISAAC_RAND      1
+#define ISAAC_X64_RAND  1
 #define PR_RAND         1
 #define WELL_RAND       1
 #define WELL_X64_RAND   1
