@@ -1,3 +1,10 @@
+2013-03-12
+----------
+
+Added the 64 bits version of ISAAC
+generator.
+
+
 2013-03-08
 ----------
 
